--- a/Clases_2023/11-10-23/Elementos/Lista/lista.ui
+++ b/Clases_2023/11-10-23/Elementos/Lista/lista.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>614</height>
+    <width>721</width>
+    <height>498</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,6 +35,16 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_3">
+      <property name="text">
+       <string>Filtrar</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="filtrar"/>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
