--- a/Clases_2023/11-10-23/Elementos/Lista/lista.ui
+++ b/Clases_2023/11-10-23/Elementos/Lista/lista.ui
@@ -25,7 +25,17 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="nombre"/>
+       <widget class="QLineEdit" name="nombre">
+        <property name="inputMask">
+         <string>*</string>
+        </property>
+        <property name="text">
+         <string>*</string>
+        </property>
+        <property name="maxLength">
+         <number>1</number>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QPushButton" name="agregar">
